# argparse-c

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.ja.md  README.md  argparse-c.pc.in  mkdocs.yml
.github/: pull_request_template.md
.github/workflows/: cd.yml  ci.yml  fuzz.yml  pages.yml
cmake/: APWarnings.cmake  argparse-cConfig.cmake.in
docs/: api-spec.en.md  api-spec.ja.md  api-spec.json  api-spec.md  api-spec.schema.json  faq.md  getting-started.md  implementation-plan.md  index.md
docs/en/: ai-agent-guide.md  faq.md  getting-started.md  index.md  security-testing.md
docs/en/guides/: basic-usage.md  completion-callbacks.md  fromfile-prefix-chars.md  known-args.md  nargs.md  options-and-types.md  subcommands.md
docs/es/: coming-soon.md  faq.md  getting-started.md  index.md
docs/es/guides/: basic-usage.md
docs/guides/: known-args.md  nargs.md
docs/ja/: ai-agent-guide.md  faq.md  getting-started.md  index.md  security-testing.md
docs/ja/guides/: basic-usage.md  completion-callbacks.md  fromfile-prefix-chars.md  known-args.md  nargs.md  options-and-types.md  subcommands.md
docs/pt-BR/: coming-soon.md  faq.md  getting-started.md  index.md
docs/pt-BR/guides/: basic-usage.md  options-and-types.md
docs/repository/: README.ja.md  README.md
docs/repository/sample/: example1.c.md  example_completion.c.md  example_fromfile.c.md  example_help_formatter.c.md  example_introspection.c.md  example_manpage.c.md  example_subcommands.c.md  example_test_runner.c.md
docs/zh-CN/: coming-soon.md  faq.md  getting-started.md  index.md
docs/zh-CN/guides/: basic-usage.md  completion-callbacks.md
include/: argparse-c-def.h  argparse-c.h
lib/: CMakeLists.txt  ap_internal.h  api.c  argparse-c.c  argparse-int.h  core_convert.c  core_parser.c  core_validate.c  format_completion_bash.c  format_completion_fish.c  format_completion_zsh.c  format_help.c  format_manpage.c  help.c  parser.c
sample/: CMakeLists.txt  example1.c  example_completion.c  example_fromfile.c  example_help_formatter.c  example_introspection.c  example_manpage.c  example_subcommands.c  example_test_runner.c
sample/consumer/cmake/: main.c
sample/templates/: completion_callback.c  known_args_forwarding.c  manpage_generation.c  required_option_error_formatting.c  subcommand_nested_parser.c
scripts/: build_docs_site.py  check_docs_links.py  coverage_ci_gcovr.sh  dev_quick_check.sh  generate_readme_demo_gif.py  sync_api_spec.py  sync_docs_repository  sync_docs_repository.py  sync_repository_docs.py  verify_docs_repository_links.py
test/: CMakeLists.txt  argparse_test.c  argparse_test.cpp  test_alloc_injector.cpp  test_format_and_api.cpp  test_formatters.cpp  test_framework.cpp  test_framework.h  test_known_args.cpp  test_parse_core.cpp  test_runner.cpp  test_subcommands_and_validation.cpp
test/CppUTest/: CommandLineTestRunner.h  TestHarness.h
test/consumer/: verify-installed-consumers.sh
test/consumer/cmake/: CMakeLists.txt
test/consumer/pkg-config/: main.c
test/fuzz/: CMakeLists.txt  fuzz_harness.c
test/fuzz/corpus/: basic_parse.txt  known_args_noise.txt  mutex_and_positionals.txt  subcommand.txt
